changelog for ephFrame
----------------------

2009-05-25
+ added model behaviors callable from every model
+ controller actions can return false to render 404 page
+ added NestedSetBehavior, FlagableBehavior and PositionableBehavior
+ added Form Field Classes and Form with configure
+ Log Levels now used correctly
+ Model can return random sets
+ Model can return simple list of fields from table
+ Model->findBy supports depth parameter
+ Model query class caches query and results
+ Model can now unbind and bind other models on the fly
+ Image->stretchResizeTo fixed
+ javascript and css component can include files from http://...
+ optimized model - bind, create methods
+ added CURL and Scraper Class
+ app/config/paths.php included before frameworks paths.php
+ Routes reusable with their names and parameters

2008-10-26
+ changed the controller order actions to create components again
+ created ModelStructureCache to handle the save and load stuff of a model (refactoring)
+ modelfieldinfo now stores length (also float) and types correctly
+ router copies same route names data from allready existing routes
+ view renders all variables (to sad that the Hash seemes to have a bug on foreach sometimes?)
+ added message to application default index if model cache dir does not exists or not writable
+ enabled Log again
+ controller now loads all components, then the models and then startups all components
+ removed some log messages from controller and component
+ model saved structure files are now read correctly (still not very cool implementation)
+ Session loads up correctly (removed double load in controller)
+ query history now skips the results part if there was just one

2008-10-24
+ form adds default action now, WEBROOT+current url
+ form fields now save their validate status (error message in formfield->error)
+ added form field password 
+ html helper now can create simple P-Elements